--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ Retornar w_k
         </section>
 
         <footer>
-            <p>Autor: Kitsun.</p>
+            <p>Autor: Kitsun | Contacto: <a href="https://x.com/Kyokopom" target="_blank" rel="noopener noreferrer">Twitter @Kyokopom</a></p>
         </footer>
     </div> <!-- .main-content -->
 
